# tcs-coding-sheet-py

./: .gitignore  .lintstagedrc.js  CHECKLIST.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Justfile  README.md  package.json  pnpm-lock.yaml  pyproject.toml  tsconfig.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
arrays/: add_element_in_array.py  small_in_array.py
code/arrays/: add_element_in_array.py  array_subset_check.py  equilibrium_index.py  small_in_array.py
code/numbers/: lcm.py
code/pyq/: binary_representation.py  longest_common_prefix.py
code/tcs/: char_transform.py  contiguous_substrings.py  majority_element.py  missing_number.py  prime_digit_sum.py  round_multiple.py  sliding_window_max.py  unique_paths.py
previously_asked_questions/: chocolate_factory.py  sliding_window_max.py  star_hash_count.py  sum_of_cubes.py  table_sum.py  unique_paths_obstacles.py  vehicle_production.py
scripts/: README.md  commit  commit.bash  index.ts
scripts/ts/: index.ts
